--- a/Сайт мониторов LG(Vanill)/index.html
+++ b/Сайт мониторов LG(Vanill)/index.html
@@ -44,7 +44,9 @@
           <div class="slide s1">
             <img src="./img/slider01.png" alt="slide1" />
           </div>
-          <div class="slide"><img src="./img/slider02.png" alt="slide2" /></div>
+          <div class="slide">
+            <img src="./img/slider02.png" alt="slide2" />
+          </div>
         </div>
         <div class="navigation">
           <label for="r1" class="bar"></label>
